<resources>
    <string name="app_name">Final Project</string>
    <string name="search_button_text">Search</string>
    <string name="search_hint_edit_text">Search…</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="save_button">Save</string>
    <string name="email_text_view">Email</string>
    <string name="last_name_text_view">Last Name</string>
    <string name="first_name_text_view">First Name</string>
    <string name="profile_picture_cont_desc">Profile Picture</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="label_for_feedback">label for feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send">Send</string>
    <string name="help">Help</string>
    <string name="current_temp">Current Temperature:</string>
    <string name="max_temp">Maximum Temperature:</string>
    <string name="min_temp">Minimum Temperature:</string>
    <string name="uv_rating">UV Rating:</string>
    <string name="alert_image">alert image</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="link_to_article">Link to article</string>
    <string name="delete_search_history">Delete search history</string>
    <string name="current_weather_information">Current Weather Information</string>
    <string name="view_search_history">View Search History</string>
    <string name="track_history">Track History?</string>
    <string name="your_search_history">Your search history</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
