<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            app:showAsAction="always"
            android:icon="@drawable/profile_icon"/>

        <item
            android:id="@+id/nav_news"
            android:title="@string/news"
            app:showAsAction="always"
            android:icon="@drawable/news_icon"/>

        <item
            android:id="@+id/nav_favourites"
            android:title="@string/favourites"
            app:showAsAction="always"
            android:icon="@drawable/favourites_icon"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            app:showAsAction="ifRoom"
            android:icon="@drawable/settings_icon"/>

        <item
            android:id="@+id/nav_help"
            android:title="@string/help"
            app:showAsAction="ifRoom" />
    </group>
</menu>