<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <include layout="@layout/toolbar_layout" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">


            <ProgressBar
                android:id="@+id/progressBar_settings"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/currentWeatherText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_weather_information"
                android:layout_below="@+id/progressBar_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_temp"
                android:layout_below="@id/currentWeatherText" />

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_temp"
                android:layout_below="@id/currentTemp" />

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_temp"
                android:layout_below="@id/maxTemp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_search_button"
                android:layout_below="@+id/minTemp"
                android:layout_toStartOf="@id/label_checkbox"
                android:layout_alignParentStart="true"
                android:text="@string/view_search_history"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delete_search_button"
                android:layout_below="@+id/view_search_button"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/label_checkbox"
                android:text="@string/delete_search_history"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label_checkbox"
                android:layout_alignParentEnd="true"
                android:text="@string/track_history"
                android:textSize="24sp"
                android:layout_alignTop="@id/view_search_button"/>

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_checkbox"
                android:layout_below="@id/label_checkbox"
                android:layout_alignParentEnd="true" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_container"
                android:layout_below="@+id/delete_search_button"
                android:layout_above="@+id/feedback_label"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feedback_label"
                android:labelFor="@+id/feedback_edit_text"
                android:layout_above="@+id/feedback_edit_text"
                android:contentDescription="@string/label_for_feedback"
                android:text="@string/send_feedback"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feedback_edit_text"
                android:inputType="text"
                android:layout_above="@id/send_button"
                android:autofillHints="feedback" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send_button"
                android:text="@string/send"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <include layout="@layout/nav_drawer_layout" />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>