<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#CCFFFFFF"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/alert_image"
        android:contentDescription="@string/alert_image" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/description"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/description"
        android:background="#D9FFFFFF"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#D9FFFFFF"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#D9FFFFFF"
        android:labelFor="@+id/date"
        android:text="@string/date"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#D9FFFFFF"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/link_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:labelFor="@+id/link"
        android:background="#D9FFFFFF"
        android:text="@string/link_to_article"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#D9FFFFFF"
        android:textSize="18sp"/>

</LinearLayout>