<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActiviy">

    <include layout="@layout/toolbar_layout" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/picture_button"
                android:layout_width="200dp"
                android:scaleType="fitCenter"
                android:background="@android:color/background_light"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/profile_picture_cont_desc"
                android:layout_below="@id/progressBar"
                android:src="@drawable/profile_icon" />

            <TextView
                android:id="@+id/first_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/picture_button"
                android:text="@string/first_name_text_view"
                android:layout_alignBottom="@+id/first_name_edit_text"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:layout_marginEnd="10dp"
                android:labelFor="@+id/first_name_edit_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/picture_button"
                android:layout_toEndOf="@+id/first_name_label"
                android:autofillHints="First Name"
                android:textSize="24sp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/last_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_label"
                android:text="@string/last_name_text_view"
                android:labelFor="@+id/last_name_edit_text"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:layout_alignBottom="@+id/last_name_edit_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_label"
                android:layout_toEndOf="@+id/last_name_label"
                android:autofillHints="Last Name"
                android:textSize="24sp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_label"
                android:layout_marginTop="10dp"
                android:layout_alignBottom="@+id/email_edit_text"
                android:text="@string/email_text_view"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:labelFor="@+id/email_edit_text"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_label"
                android:layout_toEndOf="@+id/email_label"
                android:autofillHints="Email"
                android:textSize="24sp"
                android:inputType="textEmailAddress" />

            <ImageView
                android:id="@+id/random_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/save_button"
                android:layout_below="@id/email_edit_text"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/random_image" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_blue_bright"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/save_button" />
        </RelativeLayout>

        <include layout="@layout/nav_drawer_layout" />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>